Add branches and Swagger authentication
